--- a/Unit_1/Index.html
+++ b/Unit_1/Index.html
@@ -3,10 +3,11 @@
 <head> 
 <link rel="stylesheet"  type="text/css" href="css/style.css">
 </head>
-
 <title> </title>
 <body>
-  <h1>Sam Matluck's CNC projects</h1>
-  <p> A database of various projects completed with my CNC machine. </p>
+
+  <h1> <center> Eagle Eye Aerial Photography </center> </h1>
+  <h2>Contact me </h2>
+  <h3> You name it, we film it </h3>
 
 </body>
