--- a/Unit_3/Index.html
+++ b/Unit_3/Index.html
@@ -8,6 +8,7 @@
 
   <h1> <center> Eagle Eye Aerial Photography </center> </h1>
   <h2>Contact me </h2>
+  <h3>samatluck@gmail.com </h3>
   <h3> You name it, we film it </h3>
 
 </body>
