--- a/Unit_1/Index.html
+++ b/Unit_1/Index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html> 
 <html>
 <head> 
+<title> </title>
 <link rel="stylesheet"  type="text/css" href="css/style.css">
 </head>
-<title> </title>
 <body>
 
   <h1> <center> Eagle Eye Aerial Photography </center> </h1>
   <h2>Contact me </h2>
   <h3>samatluck@gmail.com </h3>
-  <h4> You name it, we film it </h3>
+  <h4> You name it, we film it </h4>
 
 </body>
+</html>
